// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`autoMetricsOp logs correctly operation failure of async function 1`] = `
Array [
  Array [
    "operation.operationFunction.segment.undefined.start",
    1,
  ],
  Array [
    "operation.operationFunction.segment.undefined.failure.undefined",
    1,
  ],
]
`;

exports[`autoMetricsOp logs correctly operation failure of async function 2`] = `
Array [
  Array [
    [TypeError: Cannot read property 'namespace' of null],
  ],
]
`;

exports[`autoMetricsOp logs correctly operation failure of non-async function 1`] = `
Array [
  Array [
    "operation.operationFunction.segment.undefined.start",
    1,
  ],
  Array [
    "operation.operationFunction.segment.undefined.failure.undefined",
    1,
  ],
]
`;

exports[`autoMetricsOp logs correctly operation failure of non-async function 2`] = `
Array [
  Array [
    [TypeError: Cannot read property 'namespace' of null],
  ],
]
`;

exports[`autoMetricsOp logs correctly operation success of async function with async sub actions 1`] = `
Array [
  Array [
    "operation.operationFunction.segment.undefined.start",
    1,
  ],
  Array [
    "operation.operationFunction.segment.undefined.failure.undefined",
    1,
  ],
]
`;

exports[`autoMetricsOp logs correctly operation success of non-async function with non async sub actions 1`] = `
Array [
  Array [
    "operation.operationFunction.segment.undefined.start",
    1,
  ],
  Array [
    "operation.operationFunction.segment.undefined.failure.undefined",
    1,
  ],
]
`;

exports[`autoMetricsOp logs correctly operation success of req.meta from previous middlewares 1`] = `
Object {
  "operation": "operationFunction",
  "transactionId": "xxxx-xxxx",
}
`;

exports[`autoMetricsOp logs correctly operation success of req.meta from previous middlewares 2`] = `
Array [
  Array [
    "operation.operationFunction.segment.undefined.start",
    1,
  ],
  Array [
    "operation.operationFunction.segment.undefined.success",
    1,
  ],
]
`;

exports[`autoMetricsOps decorate each method correctly 1`] = `
Object {
  "operation": "operationFunctionA",
}
`;

exports[`autoMetricsOps decorate each method correctly 2`] = `
Array [
  Array [
    "operation.operationFunctionA.segment.undefined.start",
    1,
  ],
  Array [
    "operation.operationFunctionA.segment.undefined.success",
    1,
  ],
]
`;

exports[`autoMetricsOps decorate each method correctly 3`] = `
Object {
  "operation": "operationFunctionB",
}
`;
